--- a/client/index.html
+++ b/client/index.html
@@ -78,7 +78,7 @@
 
         <!--script src="http://maps.google.com/maps/api/js?sensor=false"></script-->
         <!-- build:js scripts/vendor.js -->
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -171,6 +171,8 @@
         <script src="scripts/slam/services.js"></script>
         <script src="scripts/slam/account.module.js"></script>
         <script src="scripts/slam/account.controller.js"></script>
+        <script src="scripts/slam/sliders.module.js"></script>
+        <script src="scripts/slam/sliders.controller.js"></script>
         <script src="scripts/slam/regions.module.js"></script>
         <script src="scripts/slam/regions.controller.js"></script>
         <script src="scripts/slam/competitions.module.js"></script>
